[package]
name = "nahlun-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "fs"] }
openapi = { path = "./openapi_gen", features = ["server"] }
neo4rs = "0.8.0"
moka = { version = "0.12.8", features = ["future", "futures-util"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
rustc-hash = "2.0.0"
anyhow = "1.0.88"
futures = "0.3.30"
strum = { version = "0.26.3", features = ["derive"] }
envy = "0.4.2"
reqwest = "0.12.7"
voxel-tiler-core = { version = "0.3.2", features = ["image"] }
coordinate-transformer = "1.7.0"
tower-http = { version = "0.5.2", features = ["cors"] }
bincode = "1.3.3"
serde_bytes = "0.11.15"
chrono = "0.4.38"
rust_socketio = { version = "0.6.0", features = ["async", "tokio"] }
spade = "2.12.1"
quadkey = "0.1.0"
gltf = "1.4.1"
vec-x = "0.8.0"
indexmap = "2.6.0"
dashmap = "6.1.0"
num = "0.4.3"

[build-dependencies]
yaml-rust = "0.4"
